# haskell-working-group

./: .gitignore  README.md  shakefile.hs
project/: Makefile  unoread.md
project/unoread/: LICENSE  README.md  stack.yaml  unoread.cabal
project/unoread/app/: Main.hs
project/unoread/src/: Lib.hs
project/unoread/src/Lib/: Extract.hs  Fetch.hs  Prelude.hs
project/unoread/src/Lib/Types/: Article.hs
session1/: Makefile  code.hs  slides.md  todo.md
session2/: Test.hs  code.hs  slides.html  slides.md
session2/homework/: LogAnalysis.hs
slidy/styles/: slidy.css
